correct color for non dark mode

--- a/src/components/DocsCategoryDropdown/styles.module.css
+++ b/src/components/DocsCategoryDropdown/styles.module.css
@@ -34,7 +34,7 @@
 }
 
 .docsNavSelected {
-  color: white; 
+  color: black; 
   text-decoration: underline;
   text-underline-offset: 4px; 
 }
